# webhook-platform

./: .dockerignore  .env.dist  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  BACKEND_HARD_AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REMEDIATION_PLAN_01_SECURITY.md  REMEDIATION_PLAN_02_BACKEND.md  REMEDIATION_PLAN_03_SAAS_BILLING.md  REMEDIATION_PLAN_04_FRONTEND_UX.md  REMEDIATION_PLAN_05_INFRA_DEVOPS.md  REMEDIATION_PLAN_06_FINAL.md  SECURITY.md  TEST_ITERATION_2.md  TEST_ITERATION_3.md  TEST_ITERATION_4.md  TEST_ITERATION_5.md  docker-compose.prod.yml  docker-compose.yml  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: OPERATIONS.md  SELF_HOSTED_GUIDE.md  backend-production-audit-2026-03-04.md
scripts/: create-kafka-topics.sh  e2e-test.sh  setup.sh
sdks/php/: README.md  (+1 more)
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/hookflow/: __init__.py  client.py  errors.py  webhooks.py
sdks/python/tests/: test_client.py  test_incoming.py  test_webhooks.py
sdks/python/webhook_platform/: __init__.py  client.py  errors.py  types.py  webhooks.py
sdks/python/webhook_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
webhook-platform-api/: Dockerfile  pom.xml
webhook-platform-common/: pom.xml
webhook-platform-test-receiver/: Dockerfile  pom.xml
webhook-platform-ui/: .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webhook-platform-worker/: Dockerfile  pom.xml
(+766 files in other folders)
