[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webhook-platform"
version = "1.0.1"
description = "Official Python SDK for Webhook Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Webhook Platform", email = "hello@webhook-platform.com"}
]
keywords = ["webhook", "webhooks", "api", "events", "delivery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/vadymkykalo/webhook-platform"
Repository = "https://github.com/vadymkykalo/webhook-platform"
Documentation = "https://github.com/vadymkykalo/webhook-platform#readme"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.8"
strict = true
